@@ -1,18 +1,5 @@
 package com.ra.bioskop.service;
 
-import static com.ra.bioskop.exception.BioskopException.throwException;
-
-import java.time.LocalDate;
-import java.time.LocalDateTime;
-import java.time.LocalTime;
-import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
-
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.http.HttpStatus;
-import org.springframework.stereotype.Service;
-
 import com.ra.bioskop.dto.mapper.FilmMapper;
 import com.ra.bioskop.dto.model.film.FilmAndScheduleDTO;
 import com.ra.bioskop.dto.model.film.FilmDTO;
@@ -24,15 +11,28 @@ import com.ra.bioskop.model.film.Studio;
 import com.ra.bioskop.repository.FilmRepository;
 import com.ra.bioskop.repository.StudioRepository;
 import com.ra.bioskop.util.Constants;
+import org.springframework.http.HttpStatus;
+import org.springframework.stereotype.Service;
+
+import java.time.LocalDate;
+import java.time.LocalDateTime;
+import java.time.LocalTime;
+import java.util.List;
+import java.util.Optional;
+
+import static com.ra.bioskop.exception.BioskopException.throwException;
 
 @Service
 public class FilmServiceImpl implements FilmService {
 
-    @Autowired
-    private FilmRepository filmRepository;
+    private final FilmRepository filmRepository;
 
-    @Autowired
-    private StudioRepository studioRepository;
+    private final StudioRepository studioRepository;
+
+    public FilmServiceImpl(FilmRepository filmRepository, StudioRepository studioRepository) {
+        this.filmRepository = filmRepository;
+        this.studioRepository = studioRepository;
+    }
 
     @Override
     public FilmDTO add(FilmDTO filmDTO) {
@@ -48,9 +48,10 @@ public class FilmServiceImpl implements FilmService {
             filmModel.setOnShow(filmDTO.isOnShow());
             filmModel.setReleaseDate(filmDTO.getReleaseDate());
             filmModel.setGenres(filmDTO.getGenres());
-            return FilmMapper.toDto(filmRepository.save(filmModel));
+            filmRepository.save(filmModel);
+            return filmDTO;
         }
-        throw throwException(ExceptionType.DUPLICATE_ENTITY, HttpStatus.CONFLICT, "film sudah ada.");
+        throw throwException(ExceptionType.DUPLICATE_ENTITY, HttpStatus.CONFLICT, Constants.ALREADY_EXIST_MSG);
     }
 
     @Override
@@ -63,7 +64,7 @@ public class FilmServiceImpl implements FilmService {
             filmRepository.save(filmModel);
             return FilmMapper.toDto(filmModel);
         }
-        throw throwException(ExceptionType.FILM_NOT_FOUND, HttpStatus.NO_CONTENT, "Film tidak ada");
+        throw throwException(ExceptionType.FILM_NOT_FOUND, HttpStatus.NOT_FOUND, Constants.NOT_FOUND_MSG);
     }
 
     @Override
@@ -74,7 +75,7 @@ public class FilmServiceImpl implements FilmService {
             filmRepository.delete(film.get());
             return filmDTO;
         }
-        throw throwException(ExceptionType.FILM_NOT_FOUND, HttpStatus.NO_CONTENT, "Film tidak ada");
+        throw throwException(ExceptionType.FILM_NOT_FOUND, HttpStatus.NO_CONTENT, Constants.NOT_FOUND_MSG);
     }
 
     @Override
@@ -84,9 +85,9 @@ public class FilmServiceImpl implements FilmService {
             return films.stream()
                     .filter(Film::isOnShow)
                     .map(FilmMapper::toDto)
-                    .collect(Collectors.toList());
+                    .toList();
         }
-        throw throwException(ExceptionType.FILM_NOT_FOUND, HttpStatus.NO_CONTENT, "Tidak ada tayangan film");
+        throw throwException(ExceptionType.FILM_NOT_FOUND, HttpStatus.NO_CONTENT, Constants.NOT_FOUND_MSG);
     }
 
     @Override
@@ -94,7 +95,7 @@ public class FilmServiceImpl implements FilmService {
         return filmRepository.saveAll(films)
                 .stream()
                 .map(FilmMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -103,7 +104,7 @@ public class FilmServiceImpl implements FilmService {
         if(film.isPresent()) {
             return FilmMapper.toDto(film.get());
         }
-        throw throwException(ExceptionType.FILM_NOT_FOUND, HttpStatus.NO_CONTENT, "Film tidak ada");
+        throw throwException(ExceptionType.FILM_NOT_FOUND, HttpStatus.NOT_FOUND, Constants.NOT_FOUND_MSG);
     }
 
     @Override
@@ -112,9 +113,9 @@ public class FilmServiceImpl implements FilmService {
         if(!films.isEmpty()) {
             return films.stream()
                     .map(FilmMapper::toDto)
-                    .collect(Collectors.toList());
+                    .toList();
         }
-        throw throwException(ExceptionType.FILM_NOT_FOUND, HttpStatus.NOT_FOUND, "Film tidak ada");
+        throw throwException(ExceptionType.FILM_NOT_FOUND, HttpStatus.NOT_FOUND, Constants.NOT_FOUND_MSG);
     }
 
     @Override
@@ -137,7 +138,7 @@ public class FilmServiceImpl implements FilmService {
 
             Optional<Studio> studio = studioRepository.findById(scheduleDTO.getStudioId());
             if(studio.isEmpty())
-                throw throwException(ExceptionType.NOT_FOUND, HttpStatus.NOT_FOUND, "studio tidak ditemukan.");
+                throw throwException(ExceptionType.NOT_FOUND, HttpStatus.NOT_FOUND, Constants.NOT_FOUND_MSG);
 
             schedule.setStudio(studio.get());
             filmModel.getSchedules().add(schedule);
@@ -145,7 +146,7 @@ public class FilmServiceImpl implements FilmService {
             filmRepository.save(filmModel);
             return scheduleDTO;
         }
-        throw throwException(ExceptionType.FILM_NOT_FOUND, HttpStatus.NOT_FOUND, "film tidak ada.");
+        throw throwException(ExceptionType.FILM_NOT_FOUND, HttpStatus.NOT_FOUND, Constants.NOT_FOUND_MSG);
     }
 
     @Override
@@ -154,12 +155,11 @@ public class FilmServiceImpl implements FilmService {
         if(film.isPresent()) {
             return FilmMapper.toFilmAndScheduleDTO(film.get());
         }
-        throw throwException(ExceptionType.FILM_NOT_FOUND, HttpStatus.NOT_FOUND, "film tidak ada");
+        throw throwException(ExceptionType.FILM_NOT_FOUND, HttpStatus.NOT_FOUND, Constants.NOT_FOUND_MSG);
     }
 
     private String getScheduleId(String filmCode, LocalTime startTime, LocalDate showAt) {
         String[] codes = Constants.randomIdentifier(filmCode + startTime.toString() + showAt.getDayOfWeek());
-        StringBuilder scheduleId = new StringBuilder();
-        return scheduleId.append("sc-").append(codes[3]).append("-").append(codes[4]).toString();
+        return "sc-" + codes[3] + "-" + codes[4];
     }
 }
