@@ -6,24 +6,26 @@ import com.ra.bioskop.exception.BioskopException;
 import com.ra.bioskop.exception.ExceptionType;
 import com.ra.bioskop.model.film.Studio;
 import com.ra.bioskop.repository.StudioRepository;
-import org.springframework.beans.factory.annotation.Autowired;
+import com.ra.bioskop.util.Constants;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class StudioServiceImpl implements StudioService {
 
-    @Autowired
-    private StudioRepository studioRepository;
+    private final StudioRepository studioRepository;
+
+    public StudioServiceImpl(StudioRepository studioRepository) {
+        this.studioRepository = studioRepository;
+    }
 
 
     @Override
     public void addStudios(List<StudioDTO> studioDTOList) {
         List<Studio> studios = studioDTOList.stream().map(StudioMapper::dtoToEntity)
-                .collect(Collectors.toList());
+                .toList();
         studioRepository.saveAll(studios);
     }
 
@@ -31,7 +33,7 @@ public class StudioServiceImpl implements StudioService {
     public List<StudioDTO> getAllStudio() {
         List<Studio> studios = studioRepository.findAll();
         if(studios.isEmpty())
-            throw BioskopException.throwException(ExceptionType.NOT_FOUND, HttpStatus.NOT_FOUND, "Tidak ditemukan");
-        return studios.stream().map(StudioMapper::entityToDto).collect(Collectors.toList());
+            throw BioskopException.throwException(ExceptionType.NOT_FOUND, HttpStatus.NOT_FOUND, Constants.NOT_FOUND_MSG);
+        return studios.stream().map(StudioMapper::entityToDto).toList();
     }
 }
